redesignedoj/files_usersubmissions/3/submission.txt
2_PROB7_code.cpp:1:24: error: missing terminating > character
    1 | #include <bits/stdc++.h
      |                        ^
